--- a/style.css
+++ b/style.css
@@ -116,6 +116,10 @@ li > span {
   color: #231F20;
 }
 
+ul > li {
+  padding-top: 0.25rem;
+}
+
 a {
   /* color: $primary-color; */
 }
@@ -167,19 +171,38 @@ u {
 
 
 .header-des {
-  max-width: 700px;
-  margin: 1rem 2rem;
+  text-align: center;
+  padding: 1rem 2rem;
 }
 
 .header-cta {
   font-size: 1rem;
-  max-width: 700px;
-  margin: auto 2rem;
+  padding: auto 2rem;
+}
+
+.experience {
+  display: flex;
+  width: 100%;
+  flex-wrap: wrap;
+  justify-content: center
 }
 
 .grey-bg {
   background-color: #FBFBFA;
   padding: 1rem;
+  margin: 2rem auto;
+  width: 100%;
+}
+
+.experience > div {
+  margin: 1rem;
+}
+
+@media (min-width: 800px) {
+  .experience > div {
+    margin: 1rem 1.5rem;
+    width: 37%;
+  }
 }
 
 .danger-list {
@@ -232,6 +255,10 @@ u {
 
 .mid-height {
   height: 50vh;
+}
+
+.third-height {
+  height: 33vh;
 }
 
 .cnt-pos {
