--- a/style.css
+++ b/style.css
@@ -74,6 +74,7 @@ h3 {
   padding: 0.5rem;
   line-height: 1.39;
   font-weight: bold;
+  color: #f50089;
 }
 
 h4 {
@@ -81,19 +82,6 @@ h4 {
   padding: 0.25rem auto;
   line-height: 1.39;
   text-decoration: underline;
-}
-
-h4 {
-  font-size: 1.25rem;
-  font-weight: bold;
-  padding: 0.25rem auto;
-  text-decoration: underline;
-}
-
-h4 {
-  font-size: 1.25rem;
-  font-weight: bold;
-  padding: 0.25rem auto;
 }
 
 h5 {
@@ -273,7 +261,7 @@ u {
 .btn {
   /* border-radius: .25rem; */
   line-height: 1.5;
-  padding: 0.375rem 0.75rem;
+  padding: 1.2rem 2rem;
   font-size: 1.1rem;
   font-weight: bold;
   width: 239px;
@@ -287,7 +275,6 @@ u {
 .btn:hover {
   /* border-radius: .25rem; */
   border: 2px solid #f50089;
-  background-color: white;
   color: #f50089;
 }
 
