--- a/style.css
+++ b/style.css
@@ -212,19 +212,14 @@ u {
 .grey-bg {
   background-color: #FBFBFA;
   padding: 1rem;
-  margin: 2rem auto;
+  margin: 3rem auto;
   width: 100%;
 }
 
 .softviolet-bg {
   background-color: #FFF1F9;
   padding: 1rem;
-  margin: 2rem auto;
   width: 100%;
-}
-
-.experience > div {
-  margin: 1rem;
 }
 
 @media (min-width: 800px) {
@@ -235,14 +230,38 @@ u {
 }
 
 .knowledge {
-  width: 50vw;
+  width: 100%;
+  padding: 2.5rem;
   background-color: #FBFBFA;
 }
 
-@media (max-width: 1000px) {
+
+#knowledge-list {
+  width: 90%;
+}
+
+#knowledge-list > li {
+  border: 1px solid #f50089;
+  border-radius: .25rem;
+  line-height: 1.5;
+  padding: 0.375rem 0.75rem;
+  margin: 0.25rem;
+  font-size: 1.1rem;
+  color: #f50089;
+}
+
+.color-grey {
+  color: grey;
+}
+
+
+@media (min-width: 1000px) {
   .knowledge {
-    width: 100vw;
-    padding: 2.5rem;
+    width: 50vw;
+  }
+
+  #knowledge-list {
+    width: 40vw;
   }
 }
 
@@ -265,22 +284,6 @@ u {
   }
 }
 
-
-#knowledge-list {
-  width: 40vw;
-}
-
-#knowledge-list > li {
-  margin: 0.7rem;
-}
-
-#knowledge-list > li:hover {
-  color: #f50089;
-}
-
-.color-grey {
-  color: grey;
-}
 
 .danger-list {
   width: 100%;
