--- a/style.css
+++ b/style.css
@@ -58,7 +58,7 @@ body {
 }
 
 h1 {
-  font-size: 3rem;
+  font-size: 2rem;
   font-weight: bold;
   padding: 0.4rem auto;
 }
@@ -149,6 +149,9 @@ footer {
   .header-bg {
     background-position: 25% 25%;
   }
+  h1 {
+    font-size: 3rem;
+  }  
 }
 
 .header-bg {
